content/vault/v1.11.x/content/docs/platform/mssql/troubleshooting.mdx
---
layout: docs
page_title: Troubleshoot the Vault EKM Provider
description: Troubleshooting steps for the Vault EKM Provider for Microsoft SQL Server.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-09-27T00:00:00.000Z
last_modified: 2023-09-27T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Troubleshooting the Vault EKM provider

## Check windows event logs

Logs from the Vault EKM provider will appear in Windows Event Viewer under
"Windows Logs" > "Application" with source "Transit Vault EKM Provider".

### Enable trace logging

If the logs in the Event Viewer don't give enough information to help debug
your issue, you can [enable trace logging](/vault/docs/platform/mssql/configuration#enabletrace).

Restart SQL Server for the config change to take effect, and you should see more
detailed logs in the same section of Windows Event Viewer.

## Error codes

During installation, the EKM provider registers a manifest of coded event logs to aid debugging. You may see the following error codes during operation.

### 2050 license error

The EKM provider was unable to verify that Vault has the correct license features. This
could be due to:

- An incompatible Vault Enterprise license - see the installation [prerequisites](/vault/docs/platform/mssql/installation#prerequisites) for the required license feature.
- Lack of network connectivity - Check Vault's audit logs to see if any requests are made to
   authenticate via AppRole or query the `/sys/license/status` API.
- Misconfigured AppRole auth - Ensure you provided the correct Role ID and Secret ID when
   configuring the SQL Server `CREDENTIAL`. See the
   [installation instructions](/vault/docs/platform/mssql/installation) for an end-to-end working example.
- Incorrect policy permissions - The EKM provider requires the `read` capability
   on the path `sys/license/status`. See the `tde-policy` created in the
   [installation instructions](/vault/docs/platform/mssql/installation#configuring-vault)
   for an example of a working policy.
